Add 'Services' and 'About' sections

--- a/index.html
+++ b/index.html
@@ -50,14 +50,80 @@
     <div class="carousel-inner">
     	<div class="carousel-item active">
     		<img src="img/background1.jpg">
+    		<div class="carousel-caption">
+    			<h1 class="display-2">al dente</h1>
+    			<h3>Kampanie internetowe 360</h3>
+    			<button type="button" class="btn btn-outline-light btn-lg">Usługi</button>
+    		</div>
 		</div>
 		<div class="carousel-item">
     		<img src="img/background2.jpg">
+    		<div class="carousel-caption">
+    			<h3>Twoja obecność w Internecie</h3>
+    		</div>
 		</div>
 		<div class="carousel-item">
     		<img src="img/background3.jpg">
 		</div>
     </div>
     </div>
+    <!-- Jumbotron -->
+    <div class="container-fluid">
+    <div class="row jumbotron">
+    	<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+    		<p class="lead">Analiza rynku, planowanie, implementacja kampanii oraz ciągła optymalizacja zapewni precyzyjne dotarcie do grupy docelowej.</p>
+    	</div>
+    	<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+    		<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Kontakt</button></a>
+    	</div>
+    </div>
+    </div>
+    <!-- Services -->
+    <div class="container-fluid padding">
+    <div class="row welcome text-center">
+    	<div class="col-12">
+    		<h1 class="display-4">Usługi</h1>
+    	</div>
+    	<hr>
+    	<div class="col-12">
+    		<h1 class="lead">Profesjonalne usługi z zakresu marketingu internetowego</h1>
+    	</div>
+    </div>
+    </div>
+    <div class="container-fluid padding">
+    <div class="row text-center padding">
+    	<div class="col-xs-12 col-sm-6 col-md-4">
+    		<i class="fas fa-table"></i>
+    		<h3>ANALIZA</h3>
+    		<p>Badanie rynku pod kątem konkurencji i grupy docelowej.</p>
+    	</div>
+    	<div class="col-xs-12 col-sm-6 col-md-4">
+    		<i class="fas fa-chart-bar"></i>
+    		<h3>PLANOWANIE</h3>
+    		<p>Budowanie świadomości marki w mediach cyfrowych.</p>
+    	</div>
+    	<div class="col-sm-12 col-md-4">
+    		<i class="fas fa-check-square"></i>
+    		<h3>REALIZACJA</h3>
+    		<p>Wykorzystanie odpowiednich kanałów komunikacji w Internecie.</p>
+    	</div>
+    </div>
+    <hr class="my-4">
+    </div>
+    <!-- About -->
+    <div class="container-fluid padding">
+    <div class="row padding">
+    	<div class="col-lg-6">
+    		<h1 class="display-4">O mnie</h1>
+    		<p>sadasdadsad</p>
+    		<p>asdsdasdsa</p>
+    		<a href="#" class="btn btn-primary">Kontakt</a>
+    	</div>
+    	<div class="col-lg-6">
+    		<img src="img/about.jpg" class="img-fluid">
+    	</div>
+    </div>	
+    </div>
+    <hr class="my-4">
   </body>
 </html>
